# solana-programs

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
 client/: Cargo.toml
 client/src/: main.rs
programs/share-token-distributor/: Cargo.toml
programs/share-token-distributor/src/: lib.rs
programs/simple-locker/: Cargo.toml
programs/simple-locker/src/: lib.rs
tests/: share-token-distributor.ts  simple-locker.ts
web3/simple_locker/: README.md  index.js  package.json  simple_locker.json  simple_locker.ts
