[package]
name = "simple-locker-cli"
version = "0.1.0"
edition = "2018"

[workspace]

[dependencies]
anchor-client = "0.18.2"
simple-locker = { path = "../programs/simple-locker", features = ["no-entrypoint"] }
shellexpand = "2.1.0"
anyhow = "1.0.32"
rand = "0.8.4"
clap = "3.0.0-beta.5"
solana-sdk = "1.7.11"