[package]
name = "simple-locker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_locker"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19"
anchor-spl = "0.19"

az = "1.1"
fixed = "1.11.0"
